# repa

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  DOC.md  README.md  _compat.hpp  common_types.hpp  generic_dd_grid_types.hpp  main.cpp  pargrid.cpp  pargrid.hpp  pargrid_factory.cpp  pargrid_factory.hpp  spack.yaml
cmake/: FindKDPart.cmake  FindP4est.cmake  FindParMETIS.cmake  FindTetra.cmake  define_example.cmake  define_test.cmake
examples/: CMakeLists.txt  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp
grids/: cart.cpp  cart.hpp  diffusion.cpp  diffusion.hpp  globox.hpp  graph.cpp  graph.hpp  gridbased.cpp  gridbased.hpp  hybrid-gp-diff.cpp  hybrid-gp-diff.hpp  kd_tree.cpp  kd_tree.hpp  p4est.cpp  p4est.hpp
grids/util/: ensure.hpp  linearize.hpp  mpi_cart.hpp  mpi_graph.hpp  mpi_type.cpp  mpi_type.hpp  p4est_deleter.hpp  push_back_unique.hpp  vadd.hpp  vdist.hpp
repa/: CMakeLists.txt  _compat.hpp  common_types.hpp  grid_types.cpp  grid_types.hpp  grid_variants.cpp  grid_variants.hpp  pargrid.cpp  pargrid.hpp  pargrid_factory.cpp  pargrid_factory.hpp  repa.hpp
repa/grids/: cart.cpp  cart.hpp  diff_variants.cpp  diff_variants.hpp  diffusion.cpp  diffusion.hpp  globox.hpp  glomethod.cpp  glomethod.hpp  graph.cpp  graph.hpp  gridbased.cpp  gridbased.hpp  hybrid-gp-diff.cpp  hybrid-gp-diff.hpp  kd_tree.cpp  kd_tree.hpp  p4est.cpp  p4est.hpp  psdiffusion.cpp  psdiffusion.hpp  schornbaum.cpp  schornbaum.hpp
repa/grids/util/: all_gatherv.hpp  box_global_index_storage.hpp  ensure.hpp  fill.hpp  get_keys.hpp  global_index_storage.hpp  initial_partitioning.cpp  initial_partitioning.hpp  ioptional.hpp  linearize.hpp  mpi_cart.hpp  mpi_cart_coloring.hpp  mpi_graph.hpp  mpi_neighbor_allgather.hpp  mpi_neighbor_alltoall.hpp  mpi_subset_allgather.hpp  mpi_subset_alltoall.hpp  mpi_subset_scatter_gather.hpp  mpi_type.cpp  mpi_type.hpp  neighbor_offsets.cpp  neighbor_offsets.hpp  p4est_deleter.hpp  push_back_unique.hpp  range.hpp  set_union.hpp  simple_variant.hpp  span.hpp  strong_alias.hpp  tetra.cpp  tetra.hpp  vadd.hpp  vdist.hpp  vec_arith.hpp  vector_coerce.hpp
repa/grids/util/unit_tests/: register_unit_tests.cpp  test_get_keys.cpp  test_integral_range.cpp  test_ioptional.cpp  test_linearize.cpp  test_neighbor_offsets.cpp  test_push_back_unique.cpp  test_set_union.cpp  test_simple_variant.cpp  test_span.cpp  test_strong_alias.cpp  test_tetra.cpp  test_vec.cpp  test_vec_arith.cpp  test_vector_coerce.cpp
repa/repart/: metric.cpp  metric.hpp
repart/: metric.cpp  metric.hpp
src/: CMakeLists.txt  pargrid_factory.hpp
src/grids/: cart.hpp  gridbased.hpp  hybrid-gp-diff.cpp  kd_tree.cpp  p4est.cpp
src/grids/util/: p4est_deleter.hpp
tests/: CMakeLists.txt  test_all_cells_assigned.cpp  test_all_cells_uniquely_assigned.cpp  test_all_ghost_cells_valid.cpp  test_cell_neighborhood_symmetry.cpp  test_cell_numbers.cpp  test_coloring.cpp  test_extra_params.cpp  test_ghost_exchange_volume.cpp  test_ghost_exchange_volume_ext.cpp  test_grid_types.cpp  test_hybrid_method_switch.cpp  test_integral_range.cpp  test_load_reduction.cpp  test_neighborhood_symmetry.cpp  test_pos_rank_agreement.cpp  test_process_neighborhood_symmetry.cpp  test_reentrancy.cpp  test_repart.cpp  test_repart_call.cpp  test_small_grid.cpp  test_tetra.cpp  test_tetra_gridpoints.cpp  test_unknown_exceptions.cpp  test_vec.cpp  test_vec_arith.cpp  testenv.cpp  testenv.hpp  unit_tests.cpp
tests/unit_tests/: test_get_keys.cpp  test_integral_range.cpp  test_ioptional.cpp  test_linearize.cpp  test_neighbor_offsets.cpp  test_push_back_unique.cpp  test_set_union.cpp  test_simple_variant.cpp  test_span.cpp  test_strong_alias.cpp  test_tetra.cpp  test_tetra_bug.cpp  test_vec.cpp  test_vec_arith.cpp  test_vector_coerce.cpp
util/: coverage.sh
